# diabetes_risk_ml_project

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
artifacts/metrics/: baseline_metrics.json
artifacts/models/: model.joblib  model_metadata.json
artifacts/models/logistic_regression/: model_metadata.json  (+1 more)
artifacts/reports/: best_model_report.json  correlation_matrix.csv  evaluation_report.json  model_comparison_report.csv  model_comparison_report.json  selected_threshold.json  threshold_analysis_report.json
src/analysis/: correlation_analysis.py
src/api/: dependencies.py  main.py  schemas.py
src/api/routes/: health.py  (+1 more)
src/config/: path.py
src/data_access/: data_loader.py  schemas.py  validators.py
src/evaluation/: best_model_report_writer.py  best_model_selector.py  evaluator.py  metrics.py  metrics_writer.py  model_comparison_report_writer.py  report.py  report_writer.py  selected_threshold_writer.py  threshold_analysis.py  threshold_report_writer.py  threshold_selector.py
src/inference/: artifact_loader.py  predictor.py
src/models/: model_factory.py
src/pipelines/: prediction_pipeline.py  run_model_comparison.py  run_prediction_pipeline.py  run_training_pipeline.py  training_pipeline.py
src/preprocessing/: column_config.py  column_transformer.py  preprocessing_pipeline.py  splitter.py  transformers.py
src/tracking/: mlflow_tracker.py
src/training/: model_artifact_writer.py  model_promoter.py  trainer.py
src/utils/: exceptions.py  logger.py
tests/: conftest.py
tests/fixtures/: unsupported.txt  valid_data.csv
(+33 files in other folders)
