[project]
name = "diabetes-risk"
version = "0.1.0"
description = "Production-grade diabetes risk prediction system"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    # ML
    "scikit-learn>=1.6.1",
    "xgboost>=2.0.0",
    "catboost>=1.2.0",
    # Validation & Config
    "pydantic>=2.11.5",
    "pyyaml>=6.0.2",
    "pandera>=0.23.1",
    # Model Serialization
    "joblib>=1.4.2",
    # Visualization
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "mlflow>=3.13.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.1.1",
    "ruff>=0.14.10",
    "mypy>=1.15.0",
    "types-PyYAML",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
